syntax = "proto3";

package pb;

import "global.proto";
import "event.proto";

message EventCommand {
  fixed64 event_id = 1;
  uint32 user_id = 2;
  oneof command {
    UserCommand user = 17;
    ProfileCommand profile = 7;
    DirectCommand direct = 8;
    ChatCommand chat = 9;
    ChannelCommand channel = 5;
    GroupCommand group = 6;
  }
}

message CNewMessageInput { // C: Common
  fixed64 gid = 1; // imut
  uint32 by_profile_cid = 2; // imut
  MessageType message_type =107; // imut - mostly
  string text = 7;
  uint32 via_app_id = 12; // imut
  uint32 seq = 13; // imut
//  uint32 edited_time = 17;
  uint32 created_time = 18; // imut
  bool verified = 111; // imut - verified system messages - 2 bytes tag

  uint32 flags = 112;
//  Message forward = 16; // forward is always live object from other channels, but not from other chats, groups
//  Message reply_to = 50;

}

