syntax = "proto3";

//package pbs;
option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

//import "pb_enum.proto";

message DeleteChatParam {
}

message DeleteChatResponse {
}

// chat: converatins between two users(primary channels)
service RPC_Chat {
    rpc DeleteChat (DeleteChatParam) returns (DeleteChatResponse);
    
}

